--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
-    "prettier": "^1.13.5"
+    "axios-mock-adapter": "^1.15.0",
+    "prettier": "^1.13.5",
+    "react-testing-library": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
